--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
-*_private.zsh
-*_creds.zsh
-.netrwhist
-nginx/vhosts/github*
-vim/vim.symlink/bundle/**
+# Folder view configuration files
+.DS_Store
+Desktop.ini
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# Compiled Python files
+*.pyc
+
+# Compiled C++ files
+*.out
+
+# Application specific files
+venv
+node_modules
+.sass-cache
